--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,4 @@
-# This project was done by me and my partner that disappeared.
+# This project was done by me and my partner.
 
 Perkins Perkins <ighokarop@gmail.com>
+Allan Mutai <allankiprop175@gmail.com>
